# Mnemonic

./: Cargo.toml  diesel.toml
migrations/2020-10-09-223904_create_snippets/: up.sql
snippet_storage/src/: lib.rs  models.rs  schema.rs
snippet_storage/test_db/: SNIPPETS.db
src/: main.rs
